# wires

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: db.rs  format.rs  lib.rs  main.rs  models.rs
src/commands/: cancel.rs  dep.rs  done.rs  graph.rs  init.rs  list.rs  mod.rs  new.rs  ready.rs  rm.rs  show.rs  start.rs  undep.rs  update.rs
tests/: concurrent_test.rs  dep_test.rs  error_format_test.rs  format_test.rs  graph_test.rs  init_test.rs  list_test.rs  new_test.rs  ready_test.rs  rm_test.rs  show_test.rs  status_test.rs  update_test.rs
