[package]
name = "wr"
version = "0.1.0"
edition = "2021"
description = "Lightweight local task tracker optimized for AI coding agents"
license = "MIT"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.0"
